fix a genshi string in fcomm.org

--- a/fedoracommunity.org/po/fedoracommunity.org.pot
+++ b/fedoracommunity.org/po/fedoracommunity.org.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2017-11-14 17:45+0100\n"
+"POT-Creation-Date: 2017-11-29 22:38+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -56,6 +56,14 @@ msgstr ""
 #: data/content/apac.html:35 data/content/emea.html:37
 #: data/content/latam.html:30 data/content/northam.html:29
 msgid "Region-Wide Resources"
+msgstr ""
+
+#: data/content/apac.html:37
+#, python-format
+msgid ""
+"The Asia-Pacific region is served by the <a "
+"href=\"https://fedoraproject.org/wiki/Fedora_Ambassadors_Asia_Pacific_%28FAMAPAC%29\">Fedora"
+" Ambassadors APAC group</a>."
 msgstr ""
 
 #: data/content/apac.html:42 data/content/northam.html:35
