update POT files of all websites

--- a/arm.fedoraproject.org/po/arm.fedoraproject.org.pot
+++ b/arm.fedoraproject.org/po/arm.fedoraproject.org.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-04-30 22:26+0200\n"
+"POT-Creation-Date: 2018-05-03 22:12+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -333,11 +333,11 @@ msgid "Server"
 msgstr ""
 
 #: data/content/verify.html:38
-msgid "Validate Server!"
+msgid "Verify Server!"
 msgstr ""
 
 #: data/content/verify.html:41
-msgid "Validate Minimal!"
+msgid "Verify Minimal!"
 msgstr ""
 
 #: data/content/verify.html:45
@@ -345,11 +345,11 @@ msgid "Desktop"
 msgstr ""
 
 #: data/content/verify.html:47
-msgid "Validate Workstation!"
+msgid "Verify Workstation!"
 msgstr ""
 
 #: data/content/verify.html:50
-msgid "Validate Spins!"
+msgid "Verify Spins!"
 msgstr ""
 
 #: data/content/verify.html:54
@@ -357,7 +357,7 @@ msgid "Labs"
 msgstr ""
 
 #: data/content/verify.html:56
-msgid "Validate Labs!"
+msgid "Verify Labs!"
 msgstr ""
 
 #: data/content/verify.html:63
@@ -416,7 +416,7 @@ msgid "How do I verify my downloaded image on another operating system?"
 msgstr ""
 
 #: data/content/verify.html:80
-msgid "Read these instructions to validate your image."
+msgid "Read these instructions to verify your image."
 msgstr ""
 
 #: data/content/e/404.html:7
