--- a/spins.fedoraproject.org/po/spins.fedoraproject.org.pot
+++ b/spins.fedoraproject.org/po/spins.fedoraproject.org.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-04-30 22:27+0200\n"
+"POT-Creation-Date: 2018-05-03 22:13+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -324,11 +324,11 @@ msgstr ""
 
 #: data/content/prerelease.html:204
 #: data/templates/generic/splash-checksum.html:12
-msgid "Validate 64bit!"
+msgid "Verify 64bit!"
 msgstr ""
 
 #: data/content/prerelease.html:207
-msgid "Validate 32bit!"
+msgid "Verify 32bit!"
 msgstr ""
 
 #: data/content/prerelease.html:286 data/content/prerelease.html:305
@@ -359,11 +359,11 @@ msgid ""
 msgstr ""
 
 #: data/content/verify.html:36
-msgid "Validate 64-bit!"
+msgid "Verify 64-bit!"
 msgstr ""
 
 #: data/content/verify.html:39
-msgid "Validate 32-bit!"
+msgid "Verify 32-bit!"
 msgstr ""
 
 #: data/content/verify.html:45
@@ -422,7 +422,7 @@ msgid "How do I verify my downloaded image on another operating system?"
 msgstr ""
 
 #: data/content/verify.html:62
-msgid "Read these instructions to validate your image."
+msgid "Read these instructions to verify your image."
 msgstr ""
 
 #: data/content/cinnamon/index.html:8
